--- a/ysdm.fg.app/src/main/AndroidManifest.xml
+++ b/ysdm.fg.app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kjeom.ysdm_01">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,10 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".DataStorageActivity"></activity>
         <activity
             android:name=".ThreadHandlingActivity"
             android:label="@string/title_activity_thread_handling"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
