--- a/ysdm.bg.app/src/main/AndroidManifest.xml
+++ b/ysdm.bg.app/src/main/AndroidManifest.xml
@@ -9,7 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <provider
+            android:name=".E32ContentProvider"
+            android:authorities="com.example.ysdm_bg_app.provider"
+            android:enabled="true"
+            android:exported="true"></provider>
+
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
