--- a/ysdm.bg.app/build.gradle
+++ b/ysdm.bg.app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation project(':e32contract')
 }
