--- a/ysdm.bg.app/src/main/AndroidManifest.xml
+++ b/ysdm.bg.app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
             android:authorities="com.example.ysdm_bg_app.provider"
             android:enabled="true"
             android:exported="true"></provider>
+        <receiver
+            android:name=".E4BroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.VOLUME_CHANGED_ACTION" />
+            </intent-filter>
+        </receiver>
 
         <activity android:name=".MainActivity">
             <intent-filter>
