--- a/ysdm.fg.app/src/main/AndroidManifest.xml
+++ b/ysdm.fg.app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".JNIActivity"></activity>
+        <activity android:name=".ServiceActivity" />
+        <activity
+            android:name=".MediaActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SendBroadcastActivity"
             android:label="@string/title_activity_broadcast_receiver"
