--- a/ysdm.bg.app/src/main/AndroidManifest.xml
+++ b/ysdm.bg.app/src/main/AndroidManifest.xml
@@ -3,22 +3,32 @@
     package="com.example.ysdm_bg_app">
 
     <application
+        android:name=".BgApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.example.ysdm_bg_app.BgApplication">
+        android:theme="@style/AppTheme">
+        <service
+            android:name=".HDCPService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.ysdm_bg_app.START_HDCP_SERVICE"/>
+            </intent-filter>
+        </service>
+
         <provider
             android:name=".E32ContentProvider"
             android:authorities="com.example.ysdm_bg_app.provider"
             android:enabled="true"
-            android:exported="true"></provider>
+            android:exported="true" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
