--- a/ysdm.fg.app/src/main/AndroidManifest.xml
+++ b/ysdm.fg.app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".OnHDCPErrorActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
         <activity android:name=".JNIActivity"></activity>
         <activity android:name=".ServiceActivity" />
         <activity
