--- a/ysdm.fg.app/src/main/AndroidManifest.xml
+++ b/ysdm.fg.app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kjeom.ysdm_01">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.humaxdigital.test.ACCESS_ONLY_MY_PERMISSION" />
 
     <application
         android:allowBackup="true"
